# prp-core

./: .gitignore  CONTRIBUTING.md  Dockerfile.desktop  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  generate_icons.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  build_sidecar.py  pyproject.toml  pytest.ini  requirements.txt  test.db
backend/src/prp_core/: database.py  dependencies.py  desktop_main.py  main.py  models.py  schemas.py
backend/src/prp_core/api/: router.py
backend/src/prp_core/models/: __init__.py  finance.py  modules.py
backend/src/prp_core/modules/assets/: models.py  router.py  schemas.py
backend/src/prp_core/modules/assets/services/: seeder.py
backend/src/prp_core/modules/finance/: router.py
backend/src/prp_core/modules/finance/routers/: accounts.py  transactions.py
backend/src/prp_core/modules/finance/services/: seeder.py
backend/src/prp_core/modules/planning/: models.py  router.py  schemas.py
backend/src/prp_core/modules/planning/services/: calculations.py  seeder.py
backend/src/prp_core/routers/: debug.py  modules.py
backend/src/prp_core/services/: fake_data.py
backend/tests/: conftest.py  test_accounts.py  test_transactions.py
backend/tests/integration/: conftest.py  test_accounts.py  test_transactions.py
backend/tests/unit/: test_placeholder.py  test_planning.py
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.e2e  package-lock.json  package.json  playwright.config.ts  prettier.config.js  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.html
(+40 files in other folders)
