[project]
name = "prp-core"
version = "0.1.0"
description = "The Personal Enterprise Project - Core"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy>=2.0.31",
    "asyncpg>=0.30.0",
    "pydantic>=2.8.0",
    "databases[postgresql]",
    "aiosqlite",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
