[project]
name = "prp-core"
version = "0.1.0"
description = "The Personal Enterprise Project - Core"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy>=2.0.31",
    "asyncpg>=0.30.0",
    "pydantic>=2.8.0",
    "databases[postgresql]",
    "aiosqlite",
    "faker>=38.2.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
lint = [
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prp_core"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
pretty = true
